--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,5 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/get_groundtruth)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/DCSketch)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/rerskt)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/calc_accuracy)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/SpreadSketch)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Distribution_Estimation)
