add VBF(not finished)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,5 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/DCSketch)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/rerskt)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/calc_accuracy)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/SpreadSketch)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Vector_BF)  
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Distribution_Estimation)
