test throughput degradation

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ DCSketch/metadata
 DCSketch/superspreaders
 Distribution_Estimation/files
 rerskt/output
+bSkt/output
 get_groundtruth
 calc_accuracy
 build
