add CDS DCS(not completed)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,7 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/bSkt)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/rerskt)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/calc_accuracy)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/SpreadSketch)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Vector_BF)  
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Vector_BF)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/DCS) 
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/CDS) 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Distribution_Estimation)
