--- a/CDS/CMakeLists.txt
+++ b/CDS/CMakeLists.txt
@@ -18,4 +18,17 @@ target_link_libraries(
     ${PROJECT_NAME}
     PUBLIC
     hashfunc
+    utility
+)
+
+add_executable(
+    test_CDS
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/test_cds.cpp
+)
+
+target_link_libraries(
+    test_CDS
+    PUBLIC
+    ${PROJECT_NAME}
+    mylibpcap
 )
