--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/DCSketch)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/bSkt)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/rerskt)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/calc_accuracy)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/util)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/SpreadSketch)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Vector_BF)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/DCS) 
