--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ Distribution_Estimation/files
 rerskt/output
 bSkt/output
 get_groundtruth
-calc_accuracy
+#calc_accuracy
 build
 SpreadSketch/output
 Vector_BF/output
