modify test files

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ DCSketch/output
 Distribution_Estimation/files
 rerskt/output
 bSkt/output
+vHLL/output
 build
 SpreadSketch/output
 Vector_BF/output
