--- a/DCSketch/CMakeLists.txt
+++ b/DCSketch/CMakeLists.txt
@@ -30,6 +30,14 @@ target_link_libraries(
     test_DCSketch
     PRIVATE
     DCSketch
-    hashfunc
+    mylibpcap
+)
+
+add_executable(ParamSetting ${CMAKE_CURRENT_SOURCE_DIR}/src/ParameterSetting.cpp)
+
+target_link_libraries(
+    ParamSetting
+    PRIVATE
+    DCSketch
     mylibpcap
 )
