add CAIDA subtraces

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-# DCSketch/output
-Distribution_Estimation/files
 DCSketch/output
+Distribution_Estimation/files
 rerskt/output
 bSkt/output
 vHLL/output
@@ -9,4 +8,5 @@ SpreadSketch/output
 Vector_BF/output
 CDS/output
 DCS/output
+get_groundtruth
 .vscode
