--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -12,3 +12,9 @@ target_include_directories(
     INTERFACE
     ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
+
+target_link_libraries(
+    ${PROJECT_NAME}
+    INTERFACE
+    mylibpcap
+)
