--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/DCSketch)
 # add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/vHLL)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/calc_accuracy)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/util)
-# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/SpreadSketch)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/SpreadSketch)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Vector_BF)
 # add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/DCS) 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/CDS) 
