--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,5 +14,5 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/util)
 # add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/SpreadSketch)
 # add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Vector_BF)
 # add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/DCS) 
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/CDS) 
+# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/CDS) 
 # add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Distribution_Estimation)
