--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/MurmurHash3)
 # add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/get_groundtruth)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/DCSketch)
 # add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/bSkt)
-# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/rerskt)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/rerskt)
 # add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/vHLL)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/calc_accuracy)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/util)
