--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,16 @@
 cmake_minimum_required(VERSION 3.20)
 
-project(DCSketch)
+project(CardinalityEstimation)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/mylibpcap)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/MurmurHash3)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/get_groundtruth)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/DCSketch)
-# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/bSkt)
-# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/rerskt)
-# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/vHLL)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Couper)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/bSkt)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/rerskt)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/vHLL)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/calc_accuracy)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/util)
 # add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/SpreadSketch)
 # add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Vector_BF)
-# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/DCS) 
-# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/CDS) 
-# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Distribution_Estimation)
+# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/CDS)
